--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+<link href="https://fonts.googleapis.com/css?family=Exo|Patua+One" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
-    <title>React App</title>
+    <title>SmartHome 2000</title>
   </head>
   <body>
     <div id="root"></div>
