fixed main menu in all sizes, added css from design

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-<link href="https://fonts.googleapis.com/css?family=Exo|Patua+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Exo|Oswald|Patua+One" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
